fix autentication
